--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -26,6 +26,7 @@
     "@homarr/log": "workspace:^",
     "@homarr/modals": "workspace:^0.1.0",
     "@homarr/notifications": "workspace:^0.1.0",
+    "@homarr/server-settings": "workspace:^0.1.0",
     "@homarr/spotlight": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
@@ -35,7 +36,7 @@
     "@mantine/hooks": "^7.10.1",
     "@mantine/modals": "^7.10.1",
     "@mantine/tiptap": "^7.10.1",
-    "@homarr/server-settings": "workspace:^0.1.0",
+    "@million/lint": "1.0.0-rc.18",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-devtools": "^5.40.0",
