--- a/packages/ping/package.json
+++ b/packages/ping/package.json
@@ -21,6 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@homarr/common": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0"
   },
   "devDependencies": {
