feat: weather widget scalable (#574)
* refactor: Make weather widget scalable

* fix: formatting

* fix: map key again

* fix: null assertions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,9 @@
   "js/ts.implicitProjectConfig.experimentalDecorators": true,
   "prettier.configPath": "./tooling/prettier/index.mjs",
   "cSpell.words": [
-    "superjson",
+    "cqmin",
     "homarr",
+    "superjson",
     "trpc",
     "Umami"
   ]
