--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,15 @@
     "superjson",
     "trpc",
     "Umami"
-  ]
+  ],
+  "i18n-ally.dirStructure": "auto",
+  "i18n-ally.enabledFrameworks": [
+    "next-international"
+  ],
+  "i18n-ally.localesPaths": [
+    "./packages/translation/src/lang/",
+  ],
+  "i18n-ally.enabledParsers": ["ts"],
+  "i18n-ally.extract.keyMaxLength": 0,
+  "i18n-ally.keystyle": "flat",
 }
