fix: dependency issues

--- a/apps/tasks/package.json
+++ b/apps/tasks/package.json
@@ -24,6 +24,7 @@
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/icons": "workspace:^0.1.0",
     "@homarr/log": "workspace:^",
+    "@homarr/ping": "workspace:^0.1.0",
     "@homarr/redis": "workspace:^0.1.0",
     "@homarr/server-settings": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
@@ -41,7 +42,7 @@
     "dotenv-cli": "^7.4.2",
     "eslint": "^9.4.0",
     "prettier": "^3.3.1",
-    "tsx": "4.11.0",
+    "tsx": "4.14.0",
     "typescript": "^5.4.5"
   },
   "prettier": "@homarr/prettier-config"
