--- a/apps/websocket/package.json
+++ b/apps/websocket/package.json
@@ -24,6 +24,7 @@
     "@homarr/log": "workspace:^",
     "@homarr/redis": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
+    "tsx": "4.13.3",
     "ws": "^8.17.0",
     "dotenv": "^16.4.5"
   },
