chore: improve importing of some packages

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -32,6 +32,7 @@
     "@homarr/validation": "workspace:^0.1.0",
     "@homarr/widgets": "workspace:^0.1.0",
     "@mantine/colors-generator": "^7.10.1",
+    "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@mantine/modals": "^7.10.1",
     "@mantine/tiptap": "^7.10.1",
@@ -40,7 +41,8 @@
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-query-devtools": "^5.40.1",
     "@tanstack/react-query-next-experimental": "5.41.0",
-    "@trpc/client": "11.0.0-rc.401",
+    "@tabler/icons-react": "^3.5.0",
+    "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
@@ -57,9 +59,11 @@
     "mantine-react-table": "2.0.0-beta.4",
     "next": "^14.2.3",
     "postcss-preset-mantine": "^1.15.0",
+    "prismjs": "1.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-error-boundary": "^4.0.13",
+    "react-simple-code-editor": "^0.13.1",
     "sass": "^1.77.4",
     "superjson": "2.2.1",
     "use-deep-compare-effect": "^1.8.1"
