--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -29,10 +29,13 @@
     "@homarr/redis": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
     "@homarr/server-settings": "workspace:^0.1.0",
+    "@trpc/react-query": "next",
     "@trpc/client": "next",
     "@trpc/server": "next",
     "dockerode": "^4.0.2",
-    "superjson": "2.2.1"
+    "superjson": "2.2.1",
+    "next": "^14.2.3",
+    "react": "^18.3.1"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
