--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -21,6 +21,11 @@
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "dayjs": "^1.11.11",
+    "react": "^18.3.1",
+    "next": "^14.2.3"
+  },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
