--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -33,8 +33,10 @@
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@auth/core": "0.32.0",
     "better-sqlite3": "^11.0.0",
     "drizzle-orm": "^0.31.2",
+    "dotenv": "^16.4.5",
     "mysql2": "3.10.0",
     "drizzle-kit": "^0.22.7"
   },
