--- a/packages/definitions/package.json
+++ b/packages/definitions/package.json
@@ -20,6 +20,9 @@
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "@homarr/common": "workspace:^0.1.0"
+  },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
@@ -27,8 +30,5 @@
     "eslint": "^9.4.0",
     "typescript": "^5.4.5"
   },
-  "prettier": "@homarr/prettier-config",
-  "dependencies": {
-    "@homarr/common": "workspace:^0.1.0"
-  }
+  "prettier": "@homarr/prettier-config"
 }
