--- a/packages/notifications/package.json
+++ b/packages/notifications/package.json
@@ -21,16 +21,17 @@
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "@mantine/notifications": "^7.10.1",
+    "@homarr/ui": "workspace:^0.1.0",
+    "@tabler/icons-react": "^3.5.0"
+  },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.4.0",
     "typescript": "^5.4.5"
-  },
-  "dependencies": {
-    "@mantine/notifications": "^7.10.1",
-    "@homarr/ui": "workspace:^0.1.0"
   },
   "prettier": "@homarr/prettier-config"
 }
