--- a/packages/spotlight/package.json
+++ b/packages/spotlight/package.json
@@ -21,6 +21,18 @@
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "@homarr/ui": "workspace:^0.1.0",
+    "@homarr/translation": "workspace:^0.1.0",
+    "@mantine/core": "^7.10.1",
+    "@mantine/hooks": "^7.10.1",
+    "@mantine/spotlight": "^7.10.1",
+    "@tabler/icons-react": "^3.5.0",
+    "jotai": "^2.8.3",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "use-deep-compare-effect": "^1.8.1"
+  },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
@@ -28,10 +40,5 @@
     "eslint": "^9.4.0",
     "typescript": "^5.4.5"
   },
-  "prettier": "@homarr/prettier-config",
-  "dependencies": {
-    "@mantine/spotlight": "^7.10.1",
-    "@homarr/ui": "workspace:^0.1.0",
-    "@homarr/translation": "workspace:^0.1.0"
-  }
+  "prettier": "@homarr/prettier-config"
 }
