--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,16 @@
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "@homarr/log": "workspace:^0.1.0",
+    "@homarr/translation": "workspace:^0.1.0",
+    "@mantine/core": "^7.10.1",
+    "@mantine/dates": "^7.10.1",
+    "@mantine/hooks": "^7.10.1",
+    "@tabler/icons-react": "^3.5.0",
+    "next": "^14.2.3",
+    "react": "^18.3.1"
+  },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
@@ -28,10 +38,6 @@
     "@types/css-modules": "^1.0.5",
     "eslint": "^9.4.0",
     "typescript": "^5.4.5"
-  },
-  "dependencies": {
-    "@homarr/log": "workspace:^0.1.0",
-    "@homarr/translation": "workspace:^0.1.0"
   },
   "prettier": "@homarr/prettier-config"
 }
