--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -59,9 +59,9 @@
     "mantine-react-table": "2.0.0-beta.4",
     "next": "^14.2.3",
     "postcss-preset-mantine": "^1.15.0",
-    "prismjs": "1.29.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "prismjs": "^1.29.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-simple-code-editor": "^0.13.1",
     "sass": "^1.77.4",
@@ -74,6 +74,7 @@
     "@homarr/tsconfig": "workspace:^0.1.0",
     "@types/chroma-js": "2.4.4",
     "@types/node": "^20.14.2",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "concurrently": "^8.2.2",
