--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -30,7 +30,7 @@
     "next": "^14.2.3",
     "next-auth": "5.0.0-beta.19",
     "react": "^18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
