--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cross-env": "^7.0.3",
     "jsdom": "^24.1.0",
     "prettier": "^3.3.1",
+    "testcontainers": "^10.9.0",
     "turbo": "^2.0.3",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.3.2",
