fix: eslint does not recognize test directory to be part of tsconfig

--- a/packages/integrations/tsconfig.json
+++ b/packages/integrations/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
-  "include": ["*.ts", "src"],
+  "include": ["*.ts", "src", "test"],
   "exclude": ["node_modules"]
 }
