chore: improve importing of some packages (#647)
* chore: improve importing of some packages

* fix: not same version for all dependencies

* fix: lint and format issue

--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "ioredis": "5.4.1",
+    "superjson": "2.2.1",
     "@homarr/log": "workspace:^",
     "@homarr/db": "workspace:^",
     "@homarr/common": "workspace:^"
