--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "@homarr/definitions": "workspace:^0.1.0",
-    "@homarr/validation": "workspace:^0.1.0"
+    "@homarr/validation": "workspace:^0.1.0",
+    "@homarr/translation": "workspace:^0.1.0"
   },
   "prettier": "@homarr/prettier-config"
 }
