--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "exports": {
     ".": "./index.ts",
+    "./client": "./src/client.ts",
     "./types": "./src/types.ts"
   },
   "typesVersions": {
@@ -29,6 +30,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@homarr/log": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0"
