--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,14 @@
   "typescript.tsdk": "node_modules\\typescript\\lib",
   "js/ts.implicitProjectConfig.experimentalDecorators": true,
   "prettier.configPath": "./tooling/prettier/index.mjs",
-  "cSpell.words": ["cqmin", "homarr", "superjson", "trpc", "Umami"],
+  "cSpell.words": [
+    "cqmin",
+    "homarr",
+    "Sonarr",
+    "superjson",
+    "trpc",
+    "Umami"
+  ],
   "i18n-ally.dirStructure": "auto",
   "i18n-ally.enabledFrameworks": ["next-international"],
   "i18n-ally.localesPaths": ["./packages/translation/src/lang/"],
