--- a/apps/tasks/package.json
+++ b/apps/tasks/package.json
@@ -33,7 +33,8 @@
     "@homarr/analytics": "workspace:^0.1.0",
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3",
-    "superjson": "2.2.1"
+    "superjson": "2.2.1",
+    "undici": "6.18.2"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
