refactor: add cron job core package

--- a/apps/tasks/package.json
+++ b/apps/tasks/package.json
@@ -31,6 +31,7 @@
     "@homarr/widgets": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
     "@homarr/analytics": "workspace:^0.1.0",
+    "@homarr/cron-jobs-core": "workspace:^0.1.0",
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3",
     "superjson": "2.2.1",
