--- a/apps/tasks/package.json
+++ b/apps/tasks/package.json
@@ -32,6 +32,8 @@
     "@homarr/validation": "workspace:^0.1.0",
     "@homarr/analytics": "workspace:^0.1.0",
     "@homarr/cron-jobs-core": "workspace:^0.1.0",
+    "@homarr/cron-jobs": "workspace:^0.1.0",
+    "@homarr/cron-job-runner": "workspace:^0.1.0",
     "dotenv": "^16.4.5",
     "superjson": "2.2.1",
     "undici": "6.19.2"
