--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "exports": {
     ".": "./index.ts",
+    "./client": "./src/client.ts",
     "./types": "./src/types.ts"
   },
   "typesVersions": {
@@ -25,7 +26,8 @@
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@homarr/common": "workspace:^0.1.0"
+    "@homarr/common": "workspace:^0.1.0",
+    "@homarr/translation": "workspace:^0.1.0"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
