--- a/turbo.json
+++ b/turbo.json
@@ -4,12 +4,40 @@
     "**/.env"
   ],
   "globalEnv": [
-    "DATABASE_URL",
-    "AUTH_DISCORD_ID",
-    "AUTH_DISCORD_SECRET",
-    "AUTH_REDIRECT_PROXY_URL",
+    "AUTH_LDAP_BASE",
+    "AUTH_LDAP_BIND_DN",
+    "AUTH_LDAP_BIND_PASSWORD",
+    "AUTH_LDAP_GROUP_CLASS",
+    "AUTH_LDAP_GROUP_FILTER_EXTRA_ARG",
+    "AUTH_LDAP_GROUP_MEMBER_ATTRIBUTE",
+    "AUTH_LDAP_GROUP_MEMBER_USER_ATTRIBUTE",
+    "AUTH_LDAP_SEARCH_SCOPE",
+    "AUTH_LDAP_URI",
+    "AUTH_OIDC_CLIENT_ID",
+    "AUTH_OIDC_CLIENT_NAME",
+    "AUTH_OIDC_CLIENT_SECRET",
+    "AUTH_OIDC_ISSUER",
+    "AUTH_OIDC_SCOPE_OVERWRITE",
+    "AUTH_LDAP_USERNAME_ATTRIBUTE",
+    "AUTH_LDAP_USER_MAIL_ATTRIBUTE",
+    "AUTH_LDAP_USERNAME_FILTER_EXTRA_ARG",
+    "AUTH_OIDC_AUTO_LOGIN",
+    "AUTH_PROVIDERS",
     "AUTH_SECRET",
-    "AUTH_URL"
+    "CI",
+    "DB_URL",
+    "DB_HOST",
+    "DB_USER",
+    "DB_PASSWORD",
+    "DB_NAME",
+    "DB_PORT",
+    "DB_DRIVER",
+    "DOCKER_HOSTNAMES",
+    "DOCKER_PORTS",
+    "NODE_ENV",
+    "PORT",
+    "SKIP_ENV_VALIDATION",
+    "VERCEL_URL"
   ],
   "ui": "stream",
   "tasks": {
