refactor: migrate to ldapts

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -22,27 +22,27 @@
   },
   "dependencies": {
     "@homarr/db": "workspace:^0.1.0",
+    "@homarr/common": "workspace:^0.1.0",
+    "@homarr/definitions": "workspace:^0.1.0",
+    "@homarr/log": "workspace:^0.1.0",
+    "@homarr/validation": "workspace:^0.1.0",
     "@auth/core": "^0.34.1",
     "@auth/drizzle-adapter": "^1.4.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "bcrypt": "^5.1.1",
     "cookies": "^0.9.1",
-    "ldapjs": "^3.0.7",
+    "ldapts": "7.0.12",
     "next": "^14.2.4",
     "next-auth": "5.0.0-beta.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/eslint-config": "workspace:^0.2.0",
-    "@homarr/log": "workspace:^0.1.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
-    "@homarr/validation": "workspace:^0.1.0",
     "@types/bcrypt": "5.0.2",
     "@types/cookies": "0.9.0",
-    "@types/ldapjs": "^3.0.6",
     "eslint": "^9.5.0",
     "prettier": "^3.3.2",
     "typescript": "^5.5.2"
