--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -55,6 +55,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "next": "^14.2.4",
+    "mantine-react-table": "2.0.0-beta.5",
     "react": "^18.3.1",
     "video.js": "^8.12.0"
   },
