--- a/packages/cron-jobs/package.json
+++ b/packages/cron-jobs/package.json
@@ -21,17 +21,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@homarr/log": "workspace:^0.1.0",
+    "@extractus/feed-extractor": "^7.1.3",
+    "@homarr/analytics": "workspace:^0.1.0",
+    "@homarr/common": "workspace:^0.1.0",
     "@homarr/cron-job-status": "workspace:^0.1.0",
     "@homarr/cron-jobs-core": "workspace:^0.1.0",
-    "@homarr/analytics": "workspace:^0.1.0",
     "@homarr/db": "workspace:^0.1.0",
-    "@homarr/server-settings": "workspace:^0.1.0",
-    "@homarr/common": "workspace:^0.1.0",
     "@homarr/icons": "workspace:^0.1.0",
     "@homarr/integrations": "workspace:^0.1.0",
-    "@homarr/redis": "workspace:^0.1.0",
+    "@homarr/log": "workspace:^0.1.0",
     "@homarr/ping": "workspace:^0.1.0",
+    "@homarr/redis": "workspace:^0.1.0",
+    "@homarr/server-settings": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0"
   },
   "devDependencies": {
