--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -7,6 +7,7 @@
     "./next": "./next.ts",
     "./security": "./security.ts",
     "./client": "./client.ts",
+    "./server": "./server.ts",
     "./shared": "./shared.ts",
     "./env.mjs": "./env.mjs"
   },
