fix: disable env validation in ci

--- a/.github/workflows/deployment-docker-image.yml
+++ b/.github/workflows/deployment-docker-image.yml
@@ -13,6 +13,7 @@ permissions:
   packages: write
 
 env:
+  CI: true
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   TURBO_TELEMETRY_DISABLED: 1
