--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -23,11 +23,16 @@
   },
   "dependencies": {
     "@homarr/db": "workspace:^0.1.0",
+    "@homarr/common": "workspace:^0.1.0",
+    "@homarr/definitions": "workspace:^0.1.0",
+    "@homarr/log": "workspace:^0.1.0",
+    "@homarr/validation": "workspace:^0.1.0",
     "@auth/core": "^0.34.1",
     "@auth/drizzle-adapter": "^1.4.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "bcrypt": "^5.1.1",
     "cookies": "^0.9.1",
+    "ldapts": "7.0.12",
     "next": "^14.2.5",
     "next-auth": "5.0.0-beta.19",
     "react": "^18.3.1",
@@ -37,8 +42,6 @@
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
-    "@homarr/validation": "workspace:^0.1.0",
-    "@homarr/definitions": "workspace:^0.1.0",
     "@types/bcrypt": "5.0.2",
     "@types/cookies": "0.9.0",
     "eslint": "^9.7.0",
