--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -26,9 +26,10 @@
     "@homarr/common": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0",
+    "@homarr/translation": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
     "@jellyfin/sdk": "^0.10.0",
-    "@homarr/translation": "workspace:^0.1.0"
+    "sabnzbd-api": "^1.5.0"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
