feat: add hardware usage widget

--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -43,6 +43,9 @@
     "@homarr/validation": "workspace:^0.1.0",
     "@mantine/core": "^7.14.1",
     "@mantine/hooks": "^7.14.1",
+    "@nivo/bar": "^0.87.0",
+    "@nivo/core": "^0.87.0",
+    "@nivo/line": "^0.87.0",
     "@tabler/icons-react": "^3.22.0",
     "@tiptap/extension-color": "2.10.2",
     "@tiptap/extension-highlight": "2.10.2",
