--- a/.github/workflows/deployment-docker-image.yml
+++ b/.github/workflows/deployment-docker-image.yml
@@ -13,6 +13,11 @@ on:
         required: false
         default: true
         description: Send notifications
+      push-image:
+        type: boolean
+        required: false
+        default: true
+        description: Push image to remote repository
 
 permissions:
   contents: write
@@ -88,7 +93,7 @@ jobs:
         with:
           platforms: linux/amd64 # we currently do't build for linux/arm64 as it's really slow and we'll move to a self hosted runner for that or use the official github runner, once it's available
           context: .
-          push: false
+          push: ${{ github.events.inputs.push-image }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           network: host
