--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -31,8 +31,8 @@
     "@homarr/log": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@jc21/nzbget-jsonrpc-api": "^1.0.0",
-    "@jellyfin/sdk": "^0.10.0"
+    "@jellyfin/sdk": "^0.10.0",
+    "typed-rpc": "^5.1.0"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
