chore: address pull request feedback

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "exports": {
     ".": "./index.ts",
+    "./server": "./src/server.ts",
     "./types": "./src/types.ts"
   },
   "typesVersions": {
