--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@drizzle-team/brocli": "^0.9.2",
     "@homarr/db": "workspace:^0.1.0",
+    "@homarr/common": "workspace:^0.1.0",
     "@homarr/auth": "workspace:^0.1.0",
     "dotenv": "^16.4.5"
   },
