--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@homarr/common",
+  "name": "@homarr/cli",
   "private": true,
   "version": "0.1.0",
   "type": "module",
   "exports": {
-    ".": "./index.ts",
-    "./server": "./src/server.ts",
-    "./types": "./src/types.ts"
+    ".": "./index.ts"
   },
   "typesVersions": {
     "*": {
@@ -19,13 +17,16 @@
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint",
+    "build": "esbuild src/index.ts --bundle --platform=node --outfile=cli.cjs --external:bcrypt --external:cpu-features --loader:.html=text --loader:.node=text",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "dayjs": "^1.11.12",
-    "react": "^18.3.1",
-    "next": "^14.2.5"
+    "@drizzle-team/brocli": "^0.9.2",
+    "@homarr/db": "workspace:^0.1.0",
+    "@homarr/common": "workspace:^0.1.0",
+    "@homarr/auth": "workspace:^0.1.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
