fix: renovate approval run for all pull requests on every pull request change (#942)
* fix: renovate approval run for all pull requests on every pull request change

* fix: run approval only for renovate branches

* fix: restrict actor to renovate bot

--- a/.github/workflows/renovate-automatic-approval.yml
+++ b/.github/workflows/renovate-automatic-approval.yml
@@ -2,10 +2,13 @@ name: "[Dependency Updates] Auto Approve"
 on:
   pull_request:
     types: [opened, synchronize]
+    branches:
+      - "renovate/**"
 
 jobs:
   approve-renovate-prs:
     runs-on: ubuntu-latest
+    if: github.actor == 'homarr-renovate[bot]'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,6 +24,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.obtainToken.outputs.token }}
         run: |
-          for pr in $(gh pr list --author homarr-renovate[bot] --json number --jq .[].number); do
-            gh pr review $pr --approve --body "Automatically approved by GitHub Action"
-          done
+          gh pr review ${{github.event.pull_request.number}} --approve --body "Automatically approved by GitHub Action"
