--- a/.github/workflows/renovate-automatic-approval.yml
+++ b/.github/workflows/renovate-automatic-approval.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   approve-renovate-prs:
     runs-on: ubuntu-latest
-    if: github.actor == 'homarr-renovate[bot]'
+    if: github.actor == 'homarr-renovate'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
