--- a/.github/workflows/renovate-automatic-approval.yml
+++ b/.github/workflows/renovate-automatic-approval.yml
@@ -8,8 +8,9 @@ on:
 jobs:
   approve-renovate-prs:
     runs-on: ubuntu-latest
-    if: github.actor == 'homarr-renovate'
     steps:
+      - name: Echo github payload
+        run: echo '${{ toJson(github) }}' && exit 1
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Obtain token
